# enrobie

./: .gitignore  .readthedocs.yaml  .yamllint  LICENSE  MANIFEST.in  Makefile  README.md  makebadge.py  makefile.py  pyproject.toml  reqs-develop.txt  reqs-install.txt  reqs-package.txt  setup.cfg
.github/workflows/: build.yml  document.yml  validate.yml
docs/: conf.py  index.rst
enrobie/: __init__.py  conftest.py
enrobie/clients/: __init__.py
enrobie/examples/: ainswer.yml  autojoin.yml  autonick.yml  (+7 more)
require/: develop.txt  install.txt  package.txt
sphinx/: conf.py  enrobie.clients.discord.html  enrobie.clients.discord.test.html  enrobie.clients.html  enrobie.clients.irc.html  enrobie.clients.irc.test.html  enrobie.clients.mattermost.html  enrobie.clients.mattermost.test.html  enrobie.execution.html  enrobie.execution.test.html  enrobie.html  enrobie.plugins.ainswer.html  enrobie.plugins.ainswer.test.html  enrobie.plugins.autojoin.html  enrobie.plugins.autojoin.test.html  enrobie.plugins.autonick.html  enrobie.plugins.autonick.test.html  enrobie.plugins.enhomie.html  enrobie.plugins.enhomie.test.html  enrobie.plugins.html  enrobie.plugins.logger.html  enrobie.plugins.logger.test.html  enrobie.plugins.nagios.html  enrobie.plugins.nagios.test.html  enrobie.plugins.status.html  enrobie.plugins.status.test.html  enrobie.robie.addons.html  enrobie.robie.addons.test.html  enrobie.robie.childs.html  enrobie.robie.childs.test.html  enrobie.robie.html  enrobie.robie.members.html  enrobie.robie.members.test.html  enrobie.robie.models.html  enrobie.robie.models.test.html  enrobie.robie.params.html  enrobie.robie.test.html  enrobie.robie.threads.html  enrobie.robie.threads.test.html  enrobie.utils.html  (+9 more)
validate/: coverage.txt  flake8.txt  index.json  mypy.txt  pylint.txt  pytest.txt  ruff.txt  sphinx.txt  yamllint.txt
(+343 files in other folders)
