


[project]

name = "enrobie"
description = "Enasis Network Chatting Robie"

readme = "README.md"

license.text = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"]

requires-python = ">= 3.10"

dynamic = ["version", "dependencies"]



[tool.setuptools.dynamic]

version.attr = "enrobie.__version__"

dependencies.file = ["reqs-install.txt"]



[tool.setuptools.packages.find]

include = ["enrobie", "enrobie.*"]
