


[project]

name = "enrobie"
description = "Enasis Network Chatting Robie"

readme = "README.md"

license.text = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"]

requires-python = ">= 3.11"

dynamic = ["version", "dependencies"]



[tool.setuptools.dynamic]

version.attr = "enrobie.__version__"

dependencies.file = ["reqs-install.txt"]



[tool.setuptools.packages.find]

include = ["enrobie", "enrobie.*"]
